# open_pawly

./: .gitignore  README.md  build_backend.py  pyproject.toml
adapters/: LICENSE  README.md
docs/: approval_flow.md  architecture.md  audit_and_replay.md  execution_gateway.md  oss_vs_cloud.md  pawprint_policy_engine.md  protected_skills.md  run_actions.md  status.md
examples/: README.md  adapter_integration_basic.py  basic_usage.py  execution_gateway_demo.py  integration_basic.py  run_actions_basic.py
scripts/: bootstrap.sh  smoke_test.sh  validate_self_hosted_onboarding.py
test-suite/: README.md  build_backend.py  pyproject.toml
test-suite/docs/: certification-logic.md  compatibility-levels.md  test-categories.md
test-suite/fixtures/: expected_audit.json  invalid_agent.yaml  sample_daily_report.json  valid_agent.yaml
test-suite/schemas/: compliance-report.schema.json
test-suite/src/pawly_test_suite/: __init__.py  compatibility.py  loader.py  report.py  result_types.py  runner.py  self_hosted.py
test-suite/tests/audit_tests/: test_audit_event_types.py  test_audit_fields.py  test_audit_on_block.py  test_audit_on_escalation.py
test-suite/tests/behavior_tests/: test_approval_required_escalates_or_blocks.py  test_budget_exceeded.py  test_escalation_trigger.py  test_forbidden_action_block.py
test-suite/tests/reporting_tests/: test_daily_report_format.py  test_report_required_fields.py
test-suite/tests/schema_tests/: test_authority_required.py  test_identity_required.py  test_memory_required.py  test_scope_required.py  test_self_hosted_example_loadability.py  test_self_hosted_http_shapes.py  test_self_hosted_metadata.py
tests/: conftest.py  test_adapter_stubs.py  test_api_run_actions.py  test_audit.py  test_audit_replay.py  test_budget.py  test_cloud_action_sync.py  test_example_agents.py  test_execution_gateway.py  test_goal_interface.py  test_pawprint_loader.py  test_policy_engine.py  test_policy_heuristic.py  (+6 more)
(+117 files in other folders)
