[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "pawly"
version = "0.1.3"
description = "Lightweight reference implementation of the Aploy Pawly execution-boundary controller."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Aploy Pawly Contributors" }]
dependencies = ["pawly-pawprint>=0.1.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/dustin-aploy/open_pawly"
Repository = "https://github.com/dustin-aploy/open_pawly"
Issues = "https://github.com/dustin-aploy/open_pawly/issues"
