[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "pawly-test-suite"
version = "0.1.0"
description = "Minimal local validation suite for Pawprint-based workers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Aploy Contributors" },
]
dependencies = [
  "pawly",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/dustin-aploy/open_pawly"
Repository = "https://github.com/dustin-aploy/open_pawly"
Issues = "https://github.com/dustin-aploy/open_pawly/issues"
